Version 2.2.011
    Improved logging for Alchemy potion look up (see notes)

NOTES:
    Added detailed logging when multiple configured potions match an ItemStack.
    This will help identify issues with potion configuration.

Version 2.2.010
    Fixed being unable to load REGEN potion type on new versions of Paper/Spigot 1.20.6
    Fixed some potions not gaining XP when brewed (Level 2 potions, etc)
    BrewingStands will now remember who owns them, this persists across restarts (see notes)
    Fixed rare NPE in mcMMO events when player data was unable to be retrieved
    Fixed a NPE that could happen when damaging armor with Axes
    Fixed a bug where Alchemy brewing would be cancelled if the player died
    (API) Added getMcMMOPlayer() to McMMOPlayerSkillEvent
    (API) Added new ctor McMMOPlayerSkillEvent(@NotNull McMMOPlayer mmoPlayer, @NotNull PrimarySkillType primarySkillType)
    (API) Deprecated ctor McMMOPlayerSkillEvent(org.bukkit.entity.Player, com.gmail.nossr50.datatypes.skills.PrimarySkillType)
    (API) Added ctor McMMOPlayerAbilityEvent(com.gmail.nossr50.datatypes.player.McMMOPlayer, com.gmail.nossr50.datatypes.skills.PrimarySkillType)
    (API) Deprecated ctor McMMOPlayerAbilityEvent(org.bukkit.entity.Player, com.gmail.nossr50.datatypes.skills.PrimarySkillType)
    (API) Deprecated ctor McMMOPlayerAbilityActivateEvent(org.bukkit.entity.Player, com.gmail.nossr50.datatypes.skills.PrimarySkillType)
    (API) Added ctor McMMOPlayerAbilityActivateEvent(com.gmail.nossr50.datatypes.player.McMMOPlayer, com.gmail.nossr50.datatypes.skills.PrimarySkillType)
    (API) Deprecated ctor McMMOPlayerCatalysisEvent(org.bukkit.entity.Player, double)
    (API) Added ctor McMMOPlayerCatalysisEvent(com.gmail.nossr50.datatypes.player.McMMOPlayer, double)
    (API) Deprecated util method EventUtils.callPlayerAbilityActivateEvent(org.bukkit.entity.Player, com.gmail.nossr50.datatypes.skills.PrimarySkillType)