@@ -2,5 +2,5 @@ package com.gmail.nossr50.util;
 
 public enum PotionCompatibilityType {
     PRE_1_20_5,
-    POST_1_20_6
+    MODERN
 }
