@@ -1,4 +1,5 @@
 Version 2.2.011
+    Fixed bug where some potions on older versions (1.20.4 and older) were not brewable (night vision extended, etc)
     Improved logging for Alchemy potion look up (see notes)
 
 NOTES:
